[metadata]
license_file = LICENSE.txt

[global]
verbose = 0

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
addopts = --pylint --ignore=setup.py --ignore=blend2bam/blend2gltf/blendergltf/setup.py --ignore=blend2bam/gltf2bam/panda3d-gltf/setup.py
norecursedirs = .eggs/* blendergltf/* panda3d-gltf/*
