[metadata]
name = panda3d-pman
author = Mitchell Stokes
home-page = https://github.com/Moguri/pman
description = A Python package to help bootstrap and manage Panda3D applications
long-description = file: README.md
long-description-content-type = text/markdown
license = MIT
license-file = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
include-package-data = true

[global]
verbose = 0

[aliases]
test = pytest

[tool:pytest]
addopts = --pylint --ignore=pman/templates/test_imports.py
